<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_use_vibration"
        android:title="@string/pref_title_vibrate" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_use_sound"
        android:title="@string/pref_title_new_message_notifications" />
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="@string/key_use_sound"
        android:key="@string/key_timer_sound"
        android:ringtoneType="notification"
        android:title="@string/pref_title_timer_sound" />


</PreferenceScreen>
